creadas pantallas virtualizacion y copias-segurida

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -199,6 +199,11 @@
 														<li><a href="desarrollo-web.html">Optimización & SEO</a></li>
 														<li><a href="desarrollo-web.html">Integración ERP</a></li>
 													</ul>
+													<a href="#" class="zn_mega_title">Copias de Seguridad</a>
+													<ul class="clearfix">
+														<li><a href="copias-seguridad.html">Nosotros nos encargamos</a></li>
+														<li><a href="copias-seguridad.html">Crea tu propio sistema</a></li>
+													</ul>
 												</li>
 
 												<li class="menu-item-has-children col-sm-3">
@@ -209,13 +214,11 @@
 														<li><a href="consultoria.html">Dirección de Proyectos</a></li>																
 														<li><a href="kit-digital.html">Transformación Digital</a></li>
 													</ul>
+													<a href="#" class="zn_mega_title">Virtualización</a>
+													<ul class="clearfix">
+														<li><a href="virtualizacion.html">Servicios de virtualización Hyper-v / vmware</a></li>
+													</ul>
 												</li>
-
-
-
-
-
-
 											</ul>
 										</li>
 										<li class="menu-item-has-children"><a href="desarrollos.html">DESARROLLOS</a></li>
