--- a/httpdocs/virtualizacion.html
+++ b/httpdocs/virtualizacion.html
@@ -232,7 +232,7 @@
 														<li><a href="virtualizacion.html">Servicios de virtualización Hyper-v / vmware</a></li>
 													</ul>
 												</li>
-												
+
 											</ul>
 										</li>
 										<li class="menu-item-has-children"><a href="desarrollos.html">DESARROLLOS</a>
@@ -284,8 +284,8 @@
 						<div class="col-sm-12 col-md-6 col-lg-6">
 							<!-- Sub-header titles -->
 							<div class="subheader-titles">
-								<h2 class="subheader-maintitle">CONSULTORIA EMPRESARIAL</h2>
-								<h4 class="subheader-subtitle">TE AYUDAMOS A ELEGIR EL SOFTWARE IDÓNEO PARA TU EMPRESA
+								<h2 class="subheader-maintitle">VIRTUALIZACIÓN</h2>
+								<h4 class="subheader-subtitle">SERVICIOS DE VIRTUALIZACIÓN HYPER-V / VMWARE
 								</h4>
 							</div>
 							<!--/ Sub-header titles -->
@@ -344,338 +344,6 @@
 		</section>
 		<!--/ Separator element - section with custom paddings -->
 
-		<!-- Center Frame element section + bottom mask shadow style 1 -->
-		<section class="hg_section--relative p-0">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12 col-sm-12">
-						<!-- Device center frame element -->
-						<div class="el-devimages el-devimages--type-vector el-devimages--center max-300 o-hidden">
-							<div class="el-devimages__frame">
-								<!-- Image -->
-								<div class="el-devimages__frame-img" style="background-image:url(images/kl-ss.jpg);">
-								</div>
-								<!--/ Image -->
-							</div>
-							<!--/ .el-devimages__frame -->
-						</div>
-						<!--/ Device center frame element -->
-					</div>
-					<!--/ col-md-12 col-sm-12 -->
-				</div>
-				<!--/ row -->
-			</div>
-			<!--/ container -->
-			<!-- Bottom mask style shadow 1 -->
-			<div class="kl-bottommask kl-bottommask--shadow">
-			</div>
-			<!--/ Bottom mask style shadow 1 -->
-		</section>
-
-		<!-- Call to action element - section with custom paddings -->
-		<section class="hg_section pb-0">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-12 col-md-12 col-lg-12">
-						<!-- Title element -->
-						<div class="kl-title-block tbk-symbol--border">
-							<!-- Sub-title with custom size and thin style -->
-							<h4>
-								<p>Sabemos que el momento de elegir herramientas informáticas de soporte para tu
-									organización es un momento crucial en la vida de toda empresa.</p>
-								<p>Por este motivo, ponemos a tu disposición a profesionales cualificados y con una
-									larga experiencia en el sector para que te acompañen y asesoren en todas las fases
-									del proceso.</p>
-								<p>Te asesoramos en todo el proceso de puesta en marcha de cualquier software
-									informático.</p>
-								<p>Nuestro equipo está en constante formación y evolución para ofrecerle las mejores
-									soluciones a sus necesidades de identidad corpororativa.</p>
-							</h4>
-						</div>
-						<!--/ Title element -->
-					</div>
-					<!--/ col-sm-12 col-md-9 col-lg-9 mb-sm-35 -->
-				</div>
-			</div>
-			<!--/ container -->
-		</section>
-		<!--/ Call to action element - section with custom paddings -->
-
-		<!-- Call to action element - section with custom paddings -->
-		<section class="hg_section p-0">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-12 col-md-12 col-lg-6">
-						<!-- Services box element classic style -->
-						<div class="services_box services_box--classic sb--hasicon">
-							<!-- Service box wrapper -->
-							<div class="services_box__inner clearfix">
-
-
-								<!-- Content -->
-								<div class="services_box__content">
-									<!-- Title -->
-									<h4 class="services_box__title">
-										¿Qué son las consultorías para obtener un RFP?
-									</h4>
-
-									<!--/ Title -->
-
-									<!-- Description -->
-									<div class="services_box__desc">
-										<p>
-											Son jornadas de trabajo que realizan nuestros consultores especializados
-											donde analizan los circuitos de gestión en la empresa así como los
-											procedimientos que se siguen en las diferentes áreas para optimizarlos y
-											documentarlos. Estas consultorías se realizan en las dependencias del
-											cliente para obtener los requerimientos que debe cumplir la solución
-											informática (RFP).
-										</p>
-									</div>
-									<!--/ Description -->
-
-
-								</div>
-								<!--/ Content -->
-							</div>
-							<!--/ Service box wrapper -->
-						</div>
-						<!--/ Services box element classic style -->
-					</div>
-					<!--/ col-sm-12 col-md-12 col-lg-4 -->
-
-					<div class="col-sm-12 col-md-12 col-lg-6">
-
-						<img src="images/startup-photos-2.jpg" class="alignleft" width="100%"
-							alt="IG Soluciones Hispania" title="IG Soluciones Hispania">
-					</div>
-					<!--/ col-sm-12 col-md-12 col-lg-4 -->
-
-
-					<div class="col-sm-12 col-md-12 col-lg-6">
-
-						<img src="images/pexels-photo-2.jpg" class="alignleft" width="100%"
-							alt="IG Soluciones Hispania" title="IG Soluciones Hispania">
-					</div>
-					<!--/ col-sm-12 col-md-12 col-lg-4 -->
-
-					<div class="col-sm-12 col-md-12 col-lg-6">
-						<!-- Services box element classic style -->
-						<div class="services_box services_box--classic sb--hasicon">
-							<!-- Service box wrapper -->
-							<div class="services_box__inner clearfix">
-
-
-								<!-- Content -->
-								<div class="services_box__content">
-									<!-- Title -->
-									<h4 class="services_box__title">
-										¿Cuál es su objetivo?
-									</h4>
-									<!--/ Title -->
-
-									<!-- Description -->
-									<div class="services_box__desc">
-										<p>
-											El objetivo de esta consultoría, aunque muchos empresarios crean lo
-											contrario, es un ahorro significativo de los costes humanos a la hora de
-											realizar la elección de una herramienta. Dispondras de una documentación a
-											entregar a los distintos fabricantes de un software en el que se explica el
-											funcionamiento de la empresa, así como sus procesos críticos. El impacto
-											conseguido es muy positivo, puesto que tanto las demostraciones como los
-											presupuestos de los fabricantes se adaptan a las necesidades documentadas en
-											el RFP sin posibilidad de omitir ningún requisito imprescindible.
-										</p>
-									</div>
-									<!--/ Description -->
-
-
-								</div>
-								<!--/ Content -->
-							</div>
-							<!--/ Service box wrapper -->
-						</div>
-						<!--/ Services box element classic style -->
-					</div>
-					<!--/ col-sm-12 col-md-12 col-lg-4 -->
-
-					<div class="col-sm-12 col-md-12 col-lg-12">
-						<!-- Services box element classic style -->
-						<div class="services_box services_box--classic sb--hasicon">
-
-							<!-- Content -->
-							<div class="services_box__content">
-								<!-- Title -->
-								<h3 class="services_box__title">
-									¿Dónde está el ahorro?
-								</h3>
-								<!--/ Title -->
-							</div>
-							<!--/ Content -->
-						</div>
-						<!--/ Services box element classic style -->
-					</div>
-					<!--/ col-sm-12 col-md-12 col-lg-4 -->
-
-
-					<div class="col-sm-12 col-md-12 col-lg-4">
-						<!-- Services box element classic style -->
-						<div class="services_box services_box--classic sb--hasicon">
-							<!-- Service box wrapper -->
-							<div class="services_box__inner clearfix">
-
-
-								<!-- Content -->
-								<div class="services_box__content">
-
-									<!-- Description -->
-									<div class="services_box__desc">
-										<p>
-											Supongamos que queremos cambiar de ERP y para realizar este cambio llamamos
-											a cuatro fabricantes. Al mismo tiempo, implicamos a los responsables de los
-											departamentos clave en nuestra empresa que podrían ser: compras, ventas,
-											contabilidad y producción. Cuatro fabricantes implicará que haremos frente
-											a: cuatro primeras visitas, cuatro demostraciones de producto, cuatro
-											presupuestos distintos, decenas de llamadas entre la demostración y la
-											presentación de la oferta para resolver dudas además del correspondiente
-											intercambio de correos electrónicos. Posteriormente, cuatro presentaciones
-											de ofertas y atención a las llamadas y correos por el cierre de la
-											operación.
-										</p>
-									</div>
-									<!--/ Description -->
-
-
-								</div>
-								<!--/ Content -->
-							</div>
-							<!--/ Service box wrapper -->
-						</div>
-						<!--/ Services box element classic style -->
-					</div>
-					<!--/ col-sm-12 col-md-12 col-lg-4 -->
-
-					<div class="col-sm-12 col-md-12 col-lg-4">
-						<!-- Services box element classic style -->
-						<div class="services_box services_box--classic sb--hasicon">
-							<!-- Service box wrapper -->
-							<div class="services_box__inner clearfix">
-
-
-								<!-- Content -->
-								<div class="services_box__content">
-									<!-- Description -->
-									<div class="services_box__desc">
-										<p>
-											Si cuantificamos todo este proceso, comprobaremos que la inversión de horas
-											de los usuarios clave
-											que deben estar en el proceso de validación y valoración es muy alto. El
-											coste de oportunidad
-											de cada trabajador que está en el proceso es muy valioso como para
-											invertirlo en éste
-											proceso, que además nunca responderá a una homogeneidad en los criterios
-											valorados.
-										</p>
-										<img src="images/pexels-photo-106344.jpeg" class="alignleft" width="100%"
-							alt="IG Soluciones Hispania" title="IG Soluciones Hispania">
-									</div>
-									<!--/ Description -->
-								</div>
-								<!--/ Content -->
-							</div>
-							<!--/ Service box wrapper -->
-						</div>
-						<!--/ Services box element classic style -->
-					</div>
-					<!--/ col-sm-12 col-md-12 col-lg-4 -->
-
-					<div class="col-sm-12 col-md-12 col-lg-4">
-						<!-- Services box element classic style -->
-						<div class="services_box services_box--classic sb--hasicon">
-							<!-- Service box wrapper -->
-							<div class="services_box__inner clearfix">
-
-
-								<!-- Content -->
-								<div class="services_box__content">
-									<!-- Description -->
-									<div class="services_box__desc">
-										<p>
-											Si externalizamos este proceso, se garantiza el éxito de la elección de una
-											solución
-											informática, al tiempo que se reduce muchísimo el tiempo de implementación
-											por parte
-											del fabricante, porque el integrador, conocerá desde el principio al que se
-											enfrenta y cuáles
-											son los requerimientos que debe cumplir y por los que lo valorarán.
-											Por último el integrador será capaz de dimensionar la partida de servicios
-											de forma más
-											acertada, obteniendo finalmente un proyecto con los costes controlados y sin
-											sorpresas.
-										</p>
-									</div>
-									<!--/ Description -->
-								</div>
-								<!--/ Content -->
-							</div>
-							<!--/ Service box wrapper -->
-						</div>
-						<!--/ Services box element classic style -->
-					</div>
-					<!--/ col-sm-12 col-md-12 col-lg-4 -->
-
-					<div class="col-sm-12 col-md-12 col-lg-12">
-						<!-- Services box element classic style -->
-						<div class="services_box services_box--classic sb--hasicon">
-							<!-- Service box wrapper -->
-							<div class="services_box__inner clearfix">
-
-
-								<!-- Content -->
-								<div class="services_box__content">
-									<!-- Title -->
-									<h4 class="services_box__title">
-										Conclusiones
-									</h4>
-
-									<!--/ Title -->
-
-									<!-- Description -->
-									<div class="services_box__desc">
-										<p>
-											En resumen, se trata de realizar un ejercicio de mirar hacia dentro,
-											analizar los
-											procesos y procedimientos de la empresa y documentarlos. Haremos que todas
-											las
-											demostraciones de producto y ofertas sean homogéneas. Contrastamos la
-											experiencia del
-											fabricante, visitando o llamando a sus clientes y decidiremos teniendo toda
-											la
-											información posible en nuestras manos.
-
-											Realizar un RFP no es un coste añadido, es un ahorro a futuro.
-											Realizar un RFP garantiza comparar proveedores en igualdad de condiciones.
-											Hacer un RFP permite explorar solución mixta
-											Hacer un RFP hace el proceso de selección de ERP mucho más fácil para todos.
-										</p>
-									</div>
-									<!--/ Description -->
-
-
-								</div>
-								<!--/ Content -->
-							</div>
-							<!--/ Service box wrapper -->
-						</div>
-						<!--/ Services box element classic style -->
-					</div>
-					<!--/ col-sm-12 col-md-12 col-lg-12 -->
-
-				</div>
-				<!--/ row -->
-			</div>
-			<!--/ container -->
-		</section>
 		<!--/ Call to action element - section with custom paddings -->
 		<!-- Call to action element - section with custom paddings -->
 		<section class="hg_section">
@@ -686,12 +354,14 @@
 						<div class="kl-title-block">
 							<!-- Title with alternative font, custom size, theme color and bold style -->
 							<h3 class="tbk__title kl-font-alt fs-l fw-bold tcolor">
-								¿NECESITAS AYUDA PARA ELEGIR EL MEJOR SOFTWARE?
+								¿QUIERES UN SISTEMA DE VIRTUALIZACIÓN?
 							</h3>
 
 							<!-- Sub-title with custom size and thin style -->
 							<h4 class="tbk__subtitle fs-s fw-thin">
-								Si estás buscando cómo mejorar tu sistema de gestión <span class="fw-semibold">contacta con nosotros</span> sin compromiso. Estaremos encantados de ayudarte en tu elección.
+								<span class="fw-semibold">Contacta
+									con
+									nosotros</span> sin compromiso. Estaremos encantados de ayudarte.
 							</h4>
 						</div>
 						<!--/ Title element -->
@@ -700,7 +370,8 @@
 
 					<div class="col-sm-12 col-md-3 co-lg-3 d-flex align-self-center justify-content-center">
 						<!-- Button full color style -->
-						<a href="/contacto.html" target="_self" class="btn-element btn btn-fullcolor btn-md btn-fullwidth" title="">
+						<a href="/contacto.html" target="_self"
+							class="btn-element btn btn-fullcolor btn-md btn-fullwidth" title="">
 							<span>CONTACTA</span>
 						</a>
 					</div>
