pagina virtualizacion añadida info sin tratar

--- a/httpdocs/virtualizacion.html
+++ b/httpdocs/virtualizacion.html
@@ -214,8 +214,10 @@
 													</ul>
 													<a href="#" class="zn_mega_title">Copias de Seguridad</a>
 													<ul class="clearfix">
-														<li><a href="copias-seguridad.html">Nosotros nos encargamos</a></li>
-														<li><a href="copias-seguridad.html">Crea tu propio sistema</a></li>
+														<li><a href="copias-seguridad.html">Nosotros nos encargamos</a>
+														</li>
+														<li><a href="copias-seguridad.html">Crea tu propio sistema</a>
+														</li>
 													</ul>
 												</li>
 
@@ -224,12 +226,13 @@
 													<ul class="clearfix">
 														<li><a href="consultoria.html">Procesos de negocio</a></li>
 														<li><a href="consultoria.html">Planes Estratégicos</a></li>
-														<li><a href="consultoria.html">Dirección de Proyectos</a></li>																
+														<li><a href="consultoria.html">Dirección de Proyectos</a></li>
 														<li><a href="kit-digital.html">Transformación Digital</a></li>
 													</ul>
 													<a href="#" class="zn_mega_title">Virtualización</a>
 													<ul class="clearfix">
-														<li><a href="virtualizacion.html">Servicios de virtualización Hyper-v / vmware</a></li>
+														<li><a href="virtualizacion.html">Servicios de virtualización
+																Hyper-v / vmware</a></li>
 													</ul>
 												</li>
 
@@ -343,6 +346,72 @@
 			<!--/ container -->
 		</section>
 		<!--/ Separator element - section with custom paddings -->
+
+		<!-- Call to action element - section with custom paddings -->
+		<section class="hg_section">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12 col-md-12 col-lg-12">
+						<!-- Services box element classic style -->
+						<div class="services_box services_box--classic sb--hasicon">
+							<!-- Service box wrapper -->
+							<div class="services_box__inner clearfix">
+								<!-- Content -->
+								<div class="services_box__content">
+
+									<!-- Description -->
+									<div class="services_box__desc">
+										<!-- Sub-title with custom size, weight and color -->
+										<h4 class="tbk__title kl-font-alt fs-xxl black">
+											La virtualización es una realidad ya al alcance de todos que optimiza los
+											rendimientos y el aprovechamiento de los recursos físicos.
+										</h4 <!--/ Sub-title -->
+
+									</div>
+									<!--/ Description -->
+
+									<!-- Title -->
+									<h4 class="services_box__title">
+										¿Qué puedes esperar de la virtualización?
+									</h4>
+									<!--/ Title -->
+
+									<!-- Description -->
+									<div class="services_box__desc">
+										<p>Gran flexibilidad</p>
+										<p>Mejor uso del hardware y software</p>
+										<p>Consumo energético más sostenible</p>
+										<p>Mantenimiento de los sistemas mucho más simple</p>
+									</div>
+									<!--/ Description -->
+								</div>
+								<!--/ Content -->
+							</div>
+							<!--/ Service box wrapper -->
+						</div>
+						<!--/ Services box element classic style -->
+					</div>
+					<!--/ col-sm-12 col-md-12 col-lg-4 -->
+					<div class="col-sm-12 col-md-12 col-lg-6">
+						<div class="">
+							<img src="images/Microsoft-Hyper-V-Logo.png" class="alignleft" width="100%"
+								alt="IG Soluciones Hispania" title="IG Soluciones Hispania">
+						</div>
+					</div>
+					<!--/ col-sm-12 col-md-12 col-lg-4 -->
+					<div class="col-sm-12 col-md-12 col-lg-6">
+						<div class="">
+							<img src="images/Vmware.png" class="alignleft" width="100%" alt="IG Soluciones Hispania"
+								title="IG Soluciones Hispania">
+						</div>
+
+					</div>
+					<!--/ col-sm-12 col-md-12 col-lg-4 -->
+				</div>
+				<!--/ row -->
+			</div>
+			<!--/ container -->
+		</section>
 
 		<!--/ Call to action element - section with custom paddings -->
 		<!-- Call to action element - section with custom paddings -->
