--- a/httpdocs/blog.html
+++ b/httpdocs/blog.html
@@ -285,7 +285,7 @@
 															</ul>
 															<a href="#" class="zn_mega_title">Virtualización</a>
 															<ul class="clearfix">
-																<li><a href="virtualizacion.html">Servicios de virtualización Hyper-v / vmware</a></li>
+																<li><a href="virtualizacion.html">Servicios de virtualización Hyper-v</a></li>
 															</ul>
 														</li>
 													</ul>
