--- a/httpdocs/copias-seguridad.html
+++ b/httpdocs/copias-seguridad.html
@@ -229,7 +229,7 @@
 													</ul>
 													<a href="#" class="zn_mega_title">Virtualización</a>
 													<ul class="clearfix">
-														<li><a href="virtualizacion.html">Servicios de virtualización Hyper-v / vmware</a></li>
+														<li><a href="virtualizacion.html">Servicios de virtualización Hyper-v</a></li>
 													</ul>
 												</li>
 
@@ -623,7 +623,7 @@
 
 									<div class="services_box__desc">
 										<p>Mantén la información de tu empresa segura con un sistema de copias de seguridad propio.
-											Te ayudamos a montar un sistema con dispositivos Synology que funcionan en red y en la nube
+											Te ayudamos a montar un sistema con dispositivos Synology que funcionan tanto en red como en la nube
 											y que te permitirán acceder a copias de seguridad para restaurar siempre que sea necesario.
 										</p>									
 									</div>									
