--- a/httpdocs/virtualizacion.html
+++ b/httpdocs/virtualizacion.html
@@ -232,7 +232,7 @@
 													<a href="#" class="zn_mega_title">Virtualización</a>
 													<ul class="clearfix">
 														<li><a href="virtualizacion.html">Servicios de virtualización
-																Hyper-v / vmware</a></li>
+																Hyper-v</a></li>
 													</ul>
 												</li>
 
@@ -288,7 +288,7 @@
 							<!-- Sub-header titles -->
 							<div class="subheader-titles">
 								<h2 class="subheader-maintitle">VIRTUALIZACIÓN</h2>
-								<h4 class="subheader-subtitle">SERVICIOS DE VIRTUALIZACIÓN HYPER-V / VMWARE
+								<h4 class="subheader-subtitle">SERVICIOS DE VIRTUALIZACIÓN HYPER-V
 								</h4>
 							</div>
 							<!--/ Sub-header titles -->
@@ -363,26 +363,25 @@
 									<div class="services_box__desc">
 										<!-- Sub-title with custom size, weight and color -->
 										<h4 class="tbk__title kl-font-alt fs-xxl black">
-											La virtualización es una realidad ya al alcance de todos que optimiza los
-											rendimientos y el aprovechamiento de los recursos físicos.
+											Optimiza el rendimiento y aprovecha mejor los recursos físicos gracias a la virtualización.
 										</h4 <!--/ Sub-title -->
 
 									</div>
 									<!--/ Description -->
 
 									<!-- Title -->
-									<h4 class="services_box__title">
-										¿Qué puedes esperar de la virtualización?
+									<h4 class=" tbk__title kl-font-alt fs-l fw-bold tcolor">
+										¿Qué puede ofrecerte la virtualización?
 									</h4>
 									<!--/ Title -->
 
 									<!-- Description -->
-									<div class="services_box__desc">
+									<!--<div class="services_box__desc">
 										<p>Gran flexibilidad</p>
 										<p>Mejor uso del hardware y software</p>
 										<p>Consumo energético más sostenible</p>
 										<p>Mantenimiento de los sistemas mucho más simple</p>
-									</div>
+									</div> -->
 									<!--/ Description -->
 								</div>
 								<!--/ Content -->
@@ -392,22 +391,127 @@
 						<!--/ Services box element classic style -->
 					</div>
 					<!--/ col-sm-12 col-md-12 col-lg-4 -->
-					<div class="col-sm-12 col-md-12 col-lg-6">
+
+					<div class="col-sm-12 col-md-4 col-lg-4">
+						<!-- Services box element classic style -->
+						<div class="services_box services_box--classic sb--hasicon">
+							<!-- Service box wrapper -->
+							<div class="services_box__inner clearfix">
+								<!-- Content -->
+								<div class="services_box__content">
+
+									<!-- Title -->
+									<h4 class="services_box__title ">
+										Gran flexibilidad
+									</h4>
+									<!--/ Title -->
+								</div>
+								<!--/ Content -->
+							</div>
+							<!--/ Service box wrapper -->
+						</div>
+						<!--/ Services box element classic style -->
+					</div>
+					<!--/ col-sm-12 col-md-12 col-lg-4 -->		
+					<div class="col-sm-12 col-md-4 col-lg-4">
+						<!-- Services box element classic style -->
+						<div class="services_box services_box--classic sb--hasicon">
+							<!-- Service box wrapper -->
+							<div class="services_box__inner clearfix">
+								<!-- Content -->
+								<div class="services_box__content">
+
+									<!-- Title -->
+									<h4 class="services_box__title">
+										Mejor uso del hardware y software
+									</h4>
+									<!--/ Title -->
+								</div>
+								<!--/ Content -->
+							</div>
+							<!--/ Service box wrapper -->
+						</div>
+						<!--/ Services box element classic style -->
+					</div>
+					<!--/ col-sm-12 col-md-12 col-lg-4 -->
+					<div class="col-sm-12 col-md-4 col-lg-4">
+						<!-- Services box element classic style -->
+						<div class="services_box services_box--classic sb--hasicon">
+							<!-- Service box wrapper -->
+							<div class="services_box__inner clearfix">
+								<!-- Content -->
+								<div class="services_box__content">
+
+									<!-- Title -->
+									<h4 class="services_box__title">
+										Consumo energético más sostenible
+									</h4>
+									<!--/ Title -->
+								</div>
+								<!--/ Content -->
+							</div>
+							<!--/ Service box wrapper -->
+						</div>
+						<!--/ Services box element classic style -->
+					</div>
+					<!--/ col-sm-12 col-md-12 col-lg-4 -->
+					<div class="col-sm-12 col-md-6 col-lg-6">
+						<!-- Services box element classic style -->
+						<div class="services_box services_box--classic sb--hasicon">
+							<!-- Service box wrapper -->
+							<div class="services_box__inner clearfix">
+								<!-- Content -->
+								<div class="services_box__content">
+
+									<!-- Title -->
+									<h4 class="services_box__title">
+										Mantenimiento de los sistemas mucho más simple
+									</h4>
+									<!--/ Title -->
+								</div>
+								<!--/ Content -->
+							</div>
+							<!--/ Service box wrapper -->
+						</div>
+						<!--/ Services box element classic style -->
+					</div>	
+					<div class="col-sm-12 col-md-6 col-lg-6">
+						<!-- Services box element classic style -->
+						<div class="services_box services_box--classic sb--hasicon">
+							<!-- Service box wrapper -->
+							<div class="services_box__inner clearfix">
+								<!-- Content -->
+								<div class="services_box__content">
+
+									<!-- Title -->
+									<h4 class="services_box__title">
+										Gran capacidad de recuperación
+									</h4>
+									<!--/ Title -->
+								</div>
+								<!--/ Content -->
+							</div>
+							<!--/ Service box wrapper -->
+						</div>
+						<!--/ Services box element classic style -->
+					</div>	
+
+					<div class="col-sm-12 col-md-12 col-lg-12">
 						<div class="">
-							<img src="images/Microsoft-Hyper-V-Logo.png" class="alignleft" width="100%"
-								alt="IG Soluciones Hispania" title="IG Soluciones Hispania">
+							<img src="images/Microsoft-Hyper-V-Logo.png" class="alignleft" width="50%"
+								alt="Microsoft-Hyper-V-Logo" title="Microsoft-Hyper-V-Logo">
 						</div>
 					</div>
 					<!--/ col-sm-12 col-md-12 col-lg-4 -->
-					<!--
-					<div class="col-sm-12 col-md-12 col-lg-6">
+					
+					<!--<div class="col-sm-12 col-md-6 col-lg-6">
 						<div class="">
-							<img src="images/Vmware.png" class="alignleft" width="100%" alt="IG Soluciones Hispania"
-								title="IG Soluciones Hispania">
+							<img src="images/Vmware.png" class="alignleft" width="100%" alt="VMWARE Logo"
+								title="VMWARE Logo">
 						</div>
 
-					</div>
-					-->
+					</div>-->
+					
 					<!--/ col-sm-12 col-md-12 col-lg-4 -->
 				</div>
 				<!--/ row -->
